# organisation_api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.seed.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_08_08_1256_init_9c55ca8ede23.py  2025_08_12_1122_organisation_building_id_fk_fix_baad2660a54c.py  2025_08_12_1307_activity_parent_id_nullable_086db8a8858a.py  2025_08_12_1914_pg_trgm_extension_e7320dd09d66.py  2025_08_12_1916_organisation_name_index_140ff0b4e653.py
docs/: docs.html  openapi.json
src/: config.py  main.py  models.py
src/routers/: activity.py  building.py  geo.py  organisation.py
src/schemas/: activity.py  building.py  organisation.py  phone.py
src/services/auth/: security.py
src/services/database/: mapper.py  query.py  session.py
src/services/routers/: activity.py  building.py  geo.py  organisation.py
tests/: conftest.py
tests/scripts/: main.py  seed_activity.py  seed_building.py  seed_organisation.py
tests/scripts/seeds/: activity.py  building.py  organisation.py
